# censor

./: .gitignore  Makefile  README.md  app.py  docker-compose.yaml  playbook.yaml  production.ini  pyproject.toml
.github/workflows/: release.yml  tests.yml
app/: wsgi.py
app/static/css/: main.css
app/templates/main/: info.html
backend/: Dockerfile  app.py  models.py  mydb.db  requirements.txt  setup.cfg  wsgi.py
backend/static/css/: main.css
backend/templates/layouts/: base.html
backend/templates/main/: index.html  index_old.html  login-new.html  login.html  registration.html  registration_old.html  sign-in.html
proxy/: conf
services/backend/: app.ini  forms.py  requirements.txt  wsgi.py
services/backend/main/: bank.py
services/backend/static/css/: breakpoints.css  main.css
services/backend/templates/layouts/: base.html
services/backend/templates/main/: index.html  login.html
services/backend/tests/: test_bank.py  test_main.py
src/: __main__.py
src/static/css/: main.css
src/templates/: base.html  bulma.html  index.html  info.html
src/utils/: bank.py
templates/: alpine.html  base.html  index.html
tests/: test_bank.py  test_main.py
utils/: engine.py
