[tool.poetry]
name = "ohmycash"
version = "0.1.0"
description = ""
authors = ["Boris"]

[tool.poetry.dependencies]
python = "^3.8"
pytest-cov = "^2.12.1"
pytest = "^6.2.5"
Flask-Testing = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
