[tool.poetry]
name = "censor"
version = "0.0.3"
description = "A calculator for planning expenses for a month."
authors = ["Boris Zhenikhov <znhv@yandex.com>"]

license = "MIT"

readme = "README.md"

packages = [
  { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
pytest-cov = "^2.12.1"
pytest = "^6.2.5"
Flask-Testing = "^0.8.1"
Babel = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
